Make the rendering of the Truetype notdef glyph optional with the FAPI interface (as per the previous behaviour).

A few cluster differences are expected as we have test files which use the TTF notdef, I have checked all the differences, and they are correct.

This is part of Bug 691252

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11364 a1074d23-0009-0410-80fe-cf8c14f379e6